--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             background: linear-gradient(135deg, #2c2c2c 0%, #1a1a1a 100%);
             color: #f5f5dc;
             padding: 30px;
-            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 15px;
         }
 
         .header h1 {
@@ -44,12 +48,83 @@
             padding: 30px;
         }
 
-        .form-section {
-            background: #fff;
-            padding: 30px;
-            border-radius: 16px;
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            animation: fadeIn 0.3s ease;
+        }
+
+        .modal.show {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        @keyframes slideIn {
+            from { 
+                transform: translateY(-50px);
+                opacity: 0;
+            }
+            to { 
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .modal-content {
+            background: #fffef9;
+            padding: 40px;
+            border-radius: 24px;
+            max-width: 900px;
+            width: 90%;
+            max-height: 90vh;
+            overflow-y: auto;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            animation: slideIn 0.3s ease;
+        }
+
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             margin-bottom: 30px;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
+        }
+
+        .modal-header h2 {
+            color: #2c2c2c;
+            font-size: 1.8em;
+            font-weight: 300;
+        }
+
+        .close-btn {
+            background: none;
+            border: none;
+            font-size: 2em;
+            color: #64748b;
+            cursor: pointer;
+            transition: color 0.3s ease;
+            padding: 0;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .close-btn:hover {
+            color: #2c2c2c;
         }
 
         .form-grid {
@@ -78,7 +153,7 @@
             border-radius: 12px;
             font-size: 1em;
             transition: all 0.3s ease;
-            background: #fffef9;
+            background: #fff;
             color: #2c2c2c;
         }
 
@@ -108,6 +183,17 @@
             background: #1a1a1a;
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-outline {
+            background: transparent;
+            color: #f5f5dc;
+            border: 2px solid #f5f5dc;
+        }
+
+        .btn-outline:hover {
+            background: #f5f5dc;
+            color: #2c2c2c;
         }
 
         .btn-secondary {
@@ -250,6 +336,10 @@
         }
 
         @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+            }
+
             .header h1 {
                 font-size: 1.5em;
             }
@@ -258,7 +348,11 @@
                 padding: 15px;
             }
 
-            .form-section,
+            .modal-content {
+                padding: 25px;
+                width: 95%;
+            }
+
             .search-section,
             .table-section {
                 padding: 20px;
@@ -282,6 +376,10 @@
             .btn-secondary {
                 margin-left: 0;
             }
+
+            .action-buttons {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
@@ -289,68 +387,10 @@
     <div class="container">
         <div class="header">
             <h1>TRANSFERS DATA</h1>
+            <button onclick="openModal()" class="btn btn-outline">+ Add New Transfer</button>
         </div>
 
         <div class="content">
-            <!-- Form Section -->
-            <div class="form-section">
-                <h2 style="margin-bottom: 20px; color: #2c2c2c;">Add New Transfer</h2>
-                <form id="transferForm">
-                    <div class="form-grid">
-                        <div class="form-group">
-                            <label for="date">Date</label>
-                            <input type="date" id="date" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="fromShop">From Shop</label>
-                            <select id="fromShop" required>
-                                <option value="">Select Shop</option>
-                                <option value="Arcade">Arcade</option>
-                                <option value="Shop A">Shop A</option>
-                                <option value="Shop B">Shop B</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="toShop">To Shop</label>
-                            <select id="toShop" required>
-                                <option value="">Select Shop</option>
-                                <option value="Arcade">Arcade</option>
-                                <option value="Shop A">Shop A</option>
-                                <option value="Shop B">Shop B</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="shoeName">Shoe Name</label>
-                            <input type="text" id="shoeName" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="atno">ATNO</label>
-                            <input type="text" id="atno" placeholder="N/A if empty">
-                        </div>
-                        <div class="form-group">
-                            <label for="size">Size</label>
-                            <input type="text" id="size" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="color">Color</label>
-                            <input type="text" id="color" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="staff">Staff Responsible</label>
-                            <select id="staff" required>
-                                <option value="">Select Staff</option>
-                                <option value="Milka">Milka</option>
-                                <option value="M.B">M.B</option>
-                                <option value="Kim">Kim</option>
-                                <option value="Shiko">Shiko</option>
-                                <option value="Ian">Ian</option>
-                            </select>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add Transfer</button>
-                </form>
-            </div>
-
             <!-- Search Section -->
             <div class="search-section">
                 <h2 style="margin-bottom: 20px; color: #2c2c2c;">Search Transfers</h2>
@@ -416,6 +456,70 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div id="transferModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Add New Transfer</h2>
+                <button class="close-btn" onclick="closeModal()">&times;</button>
+            </div>
+            <form id="transferForm">
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label for="date">Date</label>
+                        <input type="date" id="date" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="fromShop">From Shop</label>
+                        <select id="fromShop" required>
+                            <option value="">Select Shop</option>
+                            <option value="Arcade">Arcade</option>
+                            <option value="Shop A">Shop A</option>
+                            <option value="Shop B">Shop B</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="toShop">To Shop</label>
+                        <select id="toShop" required>
+                            <option value="">Select Shop</option>
+                            <option value="Arcade">Arcade</option>
+                            <option value="Shop A">Shop A</option>
+                            <option value="Shop B">Shop B</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="shoeName">Shoe Name</label>
+                        <input type="text" id="shoeName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="atno">ATNO</label>
+                        <input type="text" id="atno" placeholder="N/A if empty">
+                    </div>
+                    <div class="form-group">
+                        <label for="size">Size</label>
+                        <input type="text" id="size" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="color">Color</label>
+                        <input type="text" id="color" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="staff">Staff Responsible</label>
+                        <select id="staff" required>
+                            <option value="">Select Staff</option>
+                            <option value="Milka">Milka</option>
+                            <option value="M.B">M.B</option>
+                            <option value="Kim">Kim</option>
+                            <option value="Shiko">Shiko</option>
+                            <option value="Ian">Ian</option>
+                        </select>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Add Transfer</button>
+            </form>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script>
         // Initialize
@@ -435,6 +539,25 @@
             document.getElementById('searchStaff').addEventListener('change', renderTable);
             document.getElementById('searchSize').addEventListener('input', renderTable);
         });
+
+        // Modal functions
+        function openModal() {
+            document.getElementById('transferModal').classList.add('show');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeModal() {
+            document.getElementById('transferModal').classList.remove('show');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal when clicking outside
+        window.onclick = function(event) {
+            const modal = document.getElementById('transferModal');
+            if (event.target === modal) {
+                closeModal();
+            }
+        }
 
         // Load transfers from memory
         function loadTransfers() {
@@ -467,9 +590,10 @@
             saveTransfers();
             renderTable();
             
-            // Reset form
+            // Reset form and close modal
             this.reset();
             document.getElementById('date').valueAsDate = new Date();
+            closeModal();
         });
 
         // Render table with filters
