Add George option to the dropdown in index.html

--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
                             <option value="Shiko">Shiko</option>
                             <option value="Ian">Ian</option>
                             <option value="Helen">Helen</option>
+                            <option value="Helen">George</option>
                         </select>
                     </div>
                     <div class="form-group">
