Add 'George' option to selection in index.html

--- a/index.html
+++ b/index.html
@@ -530,7 +530,8 @@
                             <option value="Kim">Kim</option>
                             <option value="Shiko">Shiko</option>
                             <option value="Ian">Ian</option>
-                            <option value="Helen">Helen</option>
+                            <option value="Helen">Helen</option>\
+                            <option value="Helen">George</option>
                         </select>
                     </div>
                 </div>
