--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             <option value="Shiko">Shiko</option>
                             <option value="Ian">Ian</option>
                             <option value="Helen">Helen</option>
-                            <option value="Helen">George</option>
+                            <option value="George">George</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -531,7 +531,7 @@
                             <option value="Shiko">Shiko</option>
                             <option value="Ian">Ian</option>
                             <option value="Helen">Helen</option>\
-                            <option value="Helen">George</option>
+                            <option value="George">George</option>
                         </select>
                     </div>
                 </div>
